--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,93 +1,91 @@
 name: it_blog
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: "iT Blog"
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.3.0
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.27.1
-  firebase_auth: ^4.17.9
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
+  go_router: ^13.2.0
+  url_strategy: ^0.2.0
+  flutter_svg: ^2.0.10+1
+  flutter_easyloading: ^3.0.5
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.2
+  rxdart: ^0.27.7
+  swipeable_page_route: ^0.4.2
+  easy_localization: ^3.0.5
+  hooks_riverpod: ^2.5.1
+  flutter_hooks: ^0.20.5
+  dio: ^5.4.1
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  pretty_dio_logger: ^1.3.1
+  retrofit: ^4.1.0
+  flutter_dotenv: ^5.1.0
+  get_it: ^7.6.7
+  flutter_scale_tap: ^1.0.5
+  lottie: ^3.1.0
+  dotlottie_loader: ^0.0.3
+  injectable: ^2.3.2
+  intl: ^0.18.1
+  loop_page_view: ^1.2.5
+  blur: ^3.1.0
+  uuid: ^4.3.3
+  sticky_headers: ^0.3.0+2
+  dotted_line: ^3.2.2
+  timer_builder: ^2.0.0
+  animated_text_kit: ^4.2.2
+  visibility_detector: ^0.4.0+2
   google_sign_in: ^6.2.1
+  form_validator: ^2.1.1
+  flutter_launcher_icons: ^0.13.1
+  firebase_core: ^2.27.1
+  flutter_native_splash: ^2.3.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.1
+  riverpod: ^2.5.1
+  riverpod_generator: ^2.4.0
+  build_runner: ^2.4.8
+  custom_lint: ^0.6.2
+  riverpod_lint: ^2.3.10
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
+  retrofit_generator: ^8.1.0
+  injectable_generator: ^2.4.1
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^3.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/images/
+    - assets/svg/
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+flutter_launcher_icons:
+  android: launcher_icon
+  ios: true
+  image_path: assets/images/app_icon.png
+  min_sdk_android: 21
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+flutter_native_splash:
+  color: '#FFFFFF'
+  image: assets/images/app_logo.png
+  android_12:
+    image: assets/images/app_logo.png
+  android: true
+  ios: true
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+#  dart run flutter_native_splash:create
+#  flutter pub run flutter_launcher_icons
+#  dart run build_runner watch --delete-conflicting-outputs
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
