--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   firebase_core: ^2.27.1
   flutter_native_splash: ^2.3.10
+  form_validation: ^3.1.1
 
 dev_dependencies:
   flutter_test:
