--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,5 +60,11 @@
 		<false/>
 		<key>GADApplicationIdentifier</key>
         <string>ca-app-pub-3940256099942544~1458002511</string>
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>It Blog needs access to your photo library</string>
+        <key>NSCameraUsageDescription</key>
+        <string>It Blog needs access to your camera</string>
+        <key>NSMicrophoneUsageDescription</key>
+        <string>It Blog needs access to your microphone</string>
 	</dict>
 </plist>
