update flutter quill

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
     path: flutter_ads
   flutter_quill: ^9.3.11
   image_picker: ^1.1.1
+  flutter_quill_extensions: 9.3.12
+
 
 dev_dependencies:
   flutter_test:
